<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Login.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo_login"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:padding="8dp"
            android:src="@mipmap/news"
            android:textColor="@color/grey2"
            android:textSize="40sp"
            android:visibility="visible"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_inicial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/ola"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-thin"
            android:padding="8dp"
            android:text="@string/vamos_comear"
            android:textColor="@color/grey1"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="8dp"
            app:errorEnabled="true"
            android:textColorHint="@color/colorPrimary">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:autofillHints="@string/email"
                android:drawableStart="@drawable/ic_email_24dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/grey1"
                android:textColorHint="@color/colorPrimary"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:errorEnabled="true"
            android:textColorHint="@color/colorPrimary"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <EditText
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableStart="@drawable/ic_key_24dp"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:textColor="@color/grey1"
                android:textColorHint="@color/colorPrimary"
                android:textSize="20sp"
                android:autofillHints="@string/senha" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/registrar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="4dp">

            <LinearLayout
                android:id="@+id/login_registrar_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/novo_user"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/registrar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:onClick="abrir_cadastro"
                    android:text="@string/registro"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/esquecei_senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:padding="8dp"
                android:text="@string/esqueceu_a_senha"
                android:textColor="@color/colorPrimary"
                android:onClick="abrir_alterar"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

            </LinearLayout>
        </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_format"
            android:padding="16dp"
            android:text="@string/login_string"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/cardView_btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>