<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Cadastro.CadastroActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43">

        <ImageView
            android:id="@+id/logo_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:padding="8dp"
            android:src="@mipmap/news"
            android:textColor="@color/grey2"
            android:textSize="40sp"
            android:visibility="visible"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/ola"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-thin"
            android:text="@string/vamos_criar_uma_conta"
            android:textColor="@color/grey1"
            android:textSize="28sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_email_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:errorEnabled="true"
            android:textColorHint="@color/colorPrimary">

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:autofillHints="@string/email"
                android:drawableStart="@drawable/ic_email_24dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/grey1"
                android:textColorHint="@color/colorPrimary"
                android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_senha_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:paddingTop="8dp"
            app:passwordToggleTint="@color/colorPrimary">

            <EditText
                android:id="@+id/reg_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:autofillHints="@string/senha"
                android:drawableStart="@drawable/ic_key_24dp"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:textColor="@color/grey1"
                android:textColorHint="@color/colorPrimary"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_confirm_senha_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <EditText
                android:id="@+id/reg_confm_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:autofillHints="@string/confirmar_senha"
                android:drawableStart="@drawable/ic_key_24dp"
                android:hint="@string/confirmar_senha"
                android:inputType="textPassword"
                android:textColor="@color/grey1"
                android:textColorHint="@color/colorPrimary"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/reg_login_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/voc_j_tem_uma_conta"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/login_agora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="4dp"
                android:onClick="abrir_login"
                android:text="@string/fa_a_login"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_format"
            android:padding="16dp"
            android:text="@string/registrar"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>